--- a/css/style.css
+++ b/css/style.css
@@ -582,7 +582,7 @@ section.footer{
 }
 
 
-/* Vamos a desafiarnos trabajando con responsividad?
+/* ************************************************************Vamos a desafiarnos trabajando con responsividad?*************************
 Utiliza las referencias de los breakpoints @media abajo */
 
 
@@ -604,6 +604,9 @@ Utiliza las referencias de los breakpoints @media abajo */
     font-weight: bold;
    
 }
+.menu__title {
+    font-size: 16px;
+}
 
 /*title*/
 section.title{
@@ -616,8 +619,10 @@ section.title{
     padding: 0;
 }
 .title__profile{
-    width: 146px;
-    height: 146px;
+    width: 300px;
+    height: 150px;
+    
+    
     margin-left: 2em;
 }
 .title__bio{
@@ -632,7 +637,7 @@ section.title{
 }
 /*About*/
 section.about{
-    padding: .5em;
+    padding: 1.5em 0;
 }
 .about__container{
     width: 90%;
@@ -643,10 +648,18 @@ section.about{
     font-size: 22px;
     font-weight: bold;
 }
+.about__text{
+    margin: 1em 3em;
+}
 .about__paragraph{
     font-size: 14px;
     font-weight: normal;
 }
+.about__img{
+    height: 150px;
+    width: 175px;
+}
+
 /*Skills*/
 section.skills{
     padding: .5em;
@@ -667,7 +680,7 @@ section.skills{
     padding: 0;
     margin-right: .3rem;
     margin-bottom: 3rem;
-    width: 224px;
+    width: 185px;
     height: 118px; 
 
 
@@ -706,17 +719,29 @@ section.academic{
 .academic__courses{
    margin: 0;
    gap: 12px;
-   padding: 1.5em;
+   padding: 1em;
+   border: 2px solid green;
 }
 .academic__courses__box{
-    width: 224px;
-    height: 225px;
+   border: 2px solid red;  
 }
-
+.academic__courses__list{
+   border: 2px solid black;
+}
+.academic__courses__item__list{
+    border: 2px solid olive;
+    width: 97%;
+    height: 50%;
+}
 .academic__courses__item__img{
     width: 100%;
-    height: 118px;
+    margin: .5em;  
+    /*transition: none;*/
 }
+.academic__courses__item__img:hover{
+   transform: scale(1.1);
+}
+
 .academic__courses__item__title{
     font-size: 16px;
     font-weight: bold;
@@ -743,7 +768,7 @@ padding: 0;
 }
 .experience__info{
     width: 100%;
-    align-items: flex-start;
+    align-items: center;
 }
 .experiencie__box{
     flex-direction: column;
@@ -751,7 +776,7 @@ padding: 0;
 }
 .experience__info-container{
     width: 100%;
-    align-items: flex-start;
+    align-items: center;
 }
 .experience__title{
     font-size: 16px;
@@ -760,6 +785,23 @@ padding: 0;
     font-size: 14px;
     font-weight: normal;
 }
+.experience__img{
+    margin: 1em 2em;
+    width: 475px;
+    height: 250px;
+    align-self: center;
+    
+
+}
+.experience__img-todo{
+    width: 475px;
+    height: 250px;
+    margin: 1em 2em;
+    align-self: center;
+  
+}
+
+
 /*contacto*/
 section.contacto{
     padding: .5em;
@@ -767,24 +809,35 @@ section.contacto{
 .formcontato__contacto{
     margin: 0 1em;
     display: inline-block;
-    padding: 1em;
-    margin: 0;
+    padding: 0 1em;
+    
     width: 90vw;
+    border: 2px solid blue;
 }
 .formcontato__img{
     display: none;
 }
+.formcontato__text{
+    border: 2px solid brown;
 }
+.formcontato__botao{
+    align-self: center;
+}
+}
+/* **************************************version celular*********************************** */
 /*Mobile*/
 @media (max-width: 425px) {
 
 /*Menu*/
 section.menu{
     justify-content: space-evenly;
-    padding: .5em;
+    padding: 0;
+    border: 2px solid var(--color-boton-exp-demo);
 }
 .menu__header{
     margin: 0;
+    width: 40%;
+    border: 2px solid violet;
 
 }
 nav{
@@ -793,16 +846,22 @@ nav{
 }
 .menu__list__item__contato{
     font-weight: normal;
+    font-size: 12px;
+   
 }
-
+.menu__title{
+    font-size: 12px;
+}
 /*Titulo*/
 .title__div{
     flex-direction: column;
     align-items: flex-start;
-    margin: 0 .5em;
+    margin: 0 1.3em;
 }
 .title__profile{
-    margin: 0 0 1em 0;
+    margin: 0 0 .3em 0;
+    width: 125px;
+    height: 110px;
 }
 
 .title__subsection{
@@ -818,6 +877,12 @@ nav{
 /*Sección sobre mi*/
 .about__container{
     margin: 0 auto;
+}
+.about__title{
+    text-align: center;
+}
+.about__img{
+    display: none;
 }
 /*Skills*/
 .skills__box{
@@ -837,13 +902,32 @@ nav{
 .academic__courses{
     flex-direction: column;
 }
+.academic__courses__item__list{
+    border: 2px solid olive;
+    width: 80%;
+    height: 40%;
+    margin: 0 2em;
+    
+    
+}
 .academic__courses__box{
     width: 100%;
     height: 33%;
+    
+    
 }
+
 .academic__courses__item__img{
     margin-bottom: 1em;
+    width: 80%;
+    margin: 1em;  
 }
+.academic__courses__item__img:hover{
+    transform: none;
+ }
+ .academic__courses__list{
+    text-align: center;
+ }
 /*Experiencia Profesional*/
 .experiencia__box{
     margin: 0 1em;
@@ -851,15 +935,26 @@ nav{
 .experiencie__box{
     margin: 0 1em;
 }
+.experience__img{
+    
+    width: 325px;
+    height: 170px;
+  
+    
+
+}
+.experience__img-todo{
+    width: 325px;
+    height: 170px;
+  
+}
 
  /*Contacto*/
  .formcontato__contacto{
-    padding: .5em;
-    margin-right: 3rem;
+    padding: 0;
+    margin: 0 auto;
  }
- .formcontato__text{
-    margin: 0 1.7em 0 0;
- }
+ 
 /*Footer*/
 
 } 
