--- a/css/msj.css
+++ b/css/msj.css
@@ -1,5 +1,6 @@
 
 .mensaje__container{
+    margin: 0 auto;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -22,18 +23,45 @@
     transform: rotateY(180deg);
 }
 .boton{
-    display: flex;
     
-    margin: 0 45%;
+    display: flex;
+    align-items: center;
+  justify-content: center;
+    
 }
 .boton__inicio{
-    margin: 0 auto;
+    
     background-color: var(--color-boton-exp-demo);
     border: 2.5px solid var(--color-skill-box);
     color: var(--color-skills);
     font-size: 16px;
-    width: 144px;
+    width: 200px;
     height: 61px;
     border-radius: 20px;
     cursor: pointer;
+   
+}
+
+/* 768 px version tablet */
+.msj__img, .msj__img-derecha{
+    width: 250px;
+    height: 250px;
+}
+
+
+/* 425 px version celular */
+
+.msj__img, .msj__img-derecha{
+    width: 175px;
+    height: 175px;
+}
+.mensaje__title{
+    font-size: 14px;
+}
+
+.boton__inicio{
+    width: 160px;
+    height: 41px;
+    font-size: 14px;
+    
 }
